# discord_bot_example

./: README.md  bot.py  pyproject.toml
app/: config.py  db.py  main.py  views.py
